tests/negative/neg_pr1162_removed_null_statement.safe
package Neg_PR1162_Removed_Null_Statement

   function Consume

      null;
